# AtCoder

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  Makefile_old  README.md  auto.sh  init.sh  input.txt  lib.hpp  main.cpp  main.py  out.txt  sample.sh  sample_gen.py  template.cpp  template.hpp  template.py  test_sample.sh  tmp.clang-format  validate.cpp  validate.py  validate.sh  validate_gen.cpp  validate_gen.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
arc128/A/: main.py  metadata.json
arc128/B/: metadata.json
arc128/C/: main.cpp  metadata.json
arc128/D/: metadata.json
arc128/E/: metadata.json
arc128/F/: metadata.json
clion-remote/: Dockerfile  docker-compose.yml
lib/: accumulate.hpp  atcoder.hpp  big_numbers.hpp  bin_trie.hpp  bitset.hpp  dijkstra.hpp  dp.hpp  dsu.py  factorial.hpp  frac.hpp  geom.hpp  graph.hpp  graph_search.hpp  graphs.hpp  integers.hpp  is_prime64.cpp  itertools.hpp  linalg.hpp  mod.hpp  neldermead.hpp  nthelemset.hpp  persistent.hpp  primefactors.cpp  primefactors.hpp  scc.hpp  search.hpp  str_trie.hpp  strings.hpp  suffix_array.hpp  surffix_array.hpp  template_cpp14.hpp  topologial_sort.hpp
limits/: a.limit
scripts/: init.sh  samples.py  submit.py  task.sh  templates.sh  test.sh
scripts_new/: samples.py  submit.py  task.sh  tasks.py  validate.sh
template/: generate.cpp  header.hpp  header.py  header2.hpp  main.cpp  main.py
templates/: generate.py  main.cpp  main.py  template.hpp  template.py  validate.cpp  validate.py
tools/: atcoder.py  check.sh  repeat.sh  submit.py  task.sh  tasks.sh
(+4 files in other folders)
