cmake_minimum_required(VERSION 3.16.3)
project(AtCoder)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_VERBOSE_MAKEFILE 1)
set(CMAKE_CXX_FLAGS "--std=gnu++20")
set(CMAKE_CXX_FLAGS "-O2")
set(CMAKE_CXX_FLAGS "-Wall")
set(CMAKE_CXX_FLAGS "-Wextra")
set(CMAKE_CXX_FLAGS "-Wno-comment")
set(CMAKE_CXX_FLAGS "-ftrapv")
set(CMAKE_CXX_FLAGS "-DJUMPAKU_LOCAL")
add_executable(main_a tasks/a/main.cpp)
add_executable(main_b tasks/b/main.cpp)
add_executable(main_c tasks/c/main.cpp)
add_executable(main_d tasks/d/main.cpp)
add_executable(main_e tasks/e/main.cpp)
add_executable(main_f tasks/f/main.cpp)
add_executable(main_g tasks/g/main.cpp)
